--- a/VRChat/57/1180057.html
+++ b/VRChat/57/1180057.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7aoy1ZsZs3bP+esC1sE+n8tkfGGl4eM45JDW+nfeIsg="></script>
+    "9v4fCHBKW99lNIGqiJaszuJSlGmMJZzNmGl3aqlECLM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"病ミ娘","description":"\u003c概要\u003e\n風邪ひいてる少女です。病んでそう。配信してます(多分)\n趣味で表情が煽り特化です。改変前提アバターです（そのまま使ってもらっても構いません！！）\n・フルトラ対応\n・アイトラ無(こっちみんなモーフ採用）\n・リップシンク無(マスクしてるし...)\n・素体有(.blendファイル内)\n・R-18,R-18G可\n・MMS1.4使用\n*フルトラ推奨です。デスクトップは問題ないですが、VRだけだと、肩回りがばぐります()vrcの謎仕様に負けました。ごめんなさい\n\nアバター二種\n・パーカー　△13216\n・裸パーカー　△46458\n\n\u003c中身\u003e\n・unitypackage(prefab,fbx,texture,material,animation,animatorなど)\n・.sppファイル\n・.blendファイル\n　　→パーカー、裸パーカー、素体、ミラー,細分化適用前素体\n・read me\n\n\u003cVRC向け\u003e\n・clone可\n　＊編集可能なデータを直接渡すことが禁止です。\n\n\u003c規約の目安\u003e\n規約は同封のread meに書いてあります。これは目安としてください。これは規約ではありません。\n・商業利用可\n・二次配布、3Dモデルとしての販売の禁止\n・著作権はすべてAcysShiaruReusに帰属する","url":"https://booth.pm/ja/items/1180057","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/2d13a0c0-2756-4fa9-b3b6-77f3f8714856/i/1180057/9a8d4297-eca4-40b8-84d1-985ffc361e65_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7aoy1ZsZs3bP+esC1sE+n8tkfGGl4eM45JDW+nfeIsg="></script>
+    nonce="9v4fCHBKW99lNIGqiJaszuJSlGmMJZzNmGl3aqlECLM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -130,7 +129,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -172,7 +172,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1180057/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
@@ -187,14 +187,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1180057/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               85
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
