updated at: 2023-04-25 22:49, 01.六分儀 - コンクリの隙間 - BOOTH

--- a/VRChat/24/1264124.html
+++ b/VRChat/24/1264124.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "J009kZ1DlhhgUfLTpx+dLqrdyhRrbRL+FFKFsvWYuyI="></script>
+    "r7qWWFPVER2aFrogi6IKPYCw2T6y6C4ipG3V0OBl+Lk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"01.六分儀","description":"六分儀です。\n\n刻字 \"Mobilis In Mobili\"\n\n\n※再配布は禁止します。\n※VRChatでの使用を想定しています。\n\n\n●免責事項\nこのモデルデータを利用することで何らかの問題、損害が生じても作者は責任を負いません。\n利用条件等は予告なく変更する場合があります。","url":"https://booth.pm/ja/items/1264124","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5ae7f65e-5f8f-4971-922d-0dbf1bbe9d9e/i/1264124/0ef34da9-9b2e-4b00-a1ae-b542574354bc_base_resized.jpg"}
     </script>
@@ -83,16 +83,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="J009kZ1DlhhgUfLTpx+dLqrdyhRrbRL+FFKFsvWYuyI="></script>
+    nonce="r7qWWFPVER2aFrogi6IKPYCw2T6y6C4ipG3V0OBl+Lk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264124/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               127
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264124/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               127
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
