updated at: 2023-04-25 22:50, Hunting Trophy ハンティングトロフィー　３Dモデル　VRChat - L.F.D. 熊谷クルル　フィギュア・３Dモデル - BOOTH

--- a/VRChat/49/1264149.html
+++ b/VRChat/49/1264149.html
@@ -72,9 +72,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -104,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "B9mWWebN/aJ6GKQfngi/ijKD+gxiaGJYFhdIjl1BGrc="></script>
+    "Ru3Nkr+dcafDH0bVvJbHXqWj4ZB5SVSt0zs4O1wWgKI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Hunting Trophy ハンティングトロフィー　３Dモデル　VRChat","description":"☆バーチャルマーケット２　参加商品☆\n3/8～3/10 VRChat内で行われるバーチャルマーケット２にて実物をご覧いただけます。\n\n-------------------------\n\nHunting Trophy ハンティングトロフィー 3Dモデル（鹿角少女）\n\nモデル製作者：熊谷クルル\n\nVRChatでの使用を想定した家具モデルです。\n壁に飾るなどインテリアとしてご使用ください。\nモデルは右目に花をつけた状態です。お好みではずしてください。\n\n同デザインのリアルフィギュア（未塗装未組立キット）も販売中です。\n\n\n【仕様】　\n・Unityパッケージ\n・ボーンやアニメーションはついていません。\n\n\n【既知の問題】\n\n・髪の一部が裏側から見ると透明になります。\n　気になる場合はカリングオフのシェーダーを適用してください。\n・髪のUV展開が複雑でわかりにくくなっています。\n\n　後日修正モデルを配布予定です。\n　\n\n【利用規約】\n他オブジェクトとの組み合わせ利用、テクスチャ改変はご自由に行ってください。\nVRChat以外での動画やゲームでの利用も可能です。\n\n禁止事項：\n・改変の有無にかかわらず、再配布、販売を禁じます。\n　他人がデータを取得できる状態での公開をしないでください。\n・モデル形状の改変は極力ご遠慮ください。\n・３Dプリンタ等による立体出力は禁止です。\n\n\n免責事項：\n本モデルを使用することで生じたいかなる問題にも、著作者は一切責任を負いません。\n\n【更新履歴】\n2019/4/2 \n本ページの利用規約文言を修正。内容は変わりませんが、曖昧なところを明確にしました。\n・動画やゲームでの利用、テクスチャ改変は可であることを明示。\n・３Dプリント出力は「ご遠慮ください」から「禁止」に変更。\n\n\n\nお問い合わせ：info@lfd.jp\nTwitter： @kululu_lfd\nWeb：http://lfd.jp\nBOOTH:：http://lfd.booth.pm\n\n","url":"https://booth.pm/ja/items/1264149","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/cbe6a4ec-f2f4-491e-aa9a-8253744c888a/i/1264149/a93a73ea-2357-446e-80f6-ce35c4809d54_base_resized.jpg"}
     </script>
@@ -117,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="B9mWWebN/aJ6GKQfngi/ijKD+gxiaGJYFhdIjl1BGrc="></script>
+    nonce="Ru3Nkr+dcafDH0bVvJbHXqWj4ZB5SVSt0zs4O1wWgKI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +138,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -155,7 +154,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -198,7 +198,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264149/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
@@ -213,14 +213,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264149/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               35
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
