--- a/VRChat/36/1229736.html
+++ b/VRChat/36/1229736.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7qcmd7hRYzLcuCLFRi/vlWvS2ouVqChmQpvDOwuA02c="></script>
+    "U9R1Vb0DTuUksaaOUMWoM9xtdJMJjz8sYckhetJVhHA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SSC_Gm03: アズール・パースート / アズール・ソーティ","description":"Solid State Conception - 電脳ガーメント03\n「アズール・パースート」/「アズール・ソーティ」\n\n警備組織をイメージしたミリタリーライクな衣装です。\n男性用「パースート」と、女性用「ソーティ」のセット。\nボーン、ウェイト設定済み。手、足付属。アバターの頭部モデルがあれば、すぐに導入可能です。\n\n※アバターは付属しません。\n\n・DynamicBone設定済み。同名のアセットをお持ちの場合、装飾が揺れます。\n・Clothコンポーネント設定済み。「アズール・ソーティ」のスカートが揺れ、足との干渉を（ある程度）防ぎます。","url":"https://booth.pm/ja/items/1229736","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/c0a72cc4-55c2-42d7-8acf-052eee064242/i/1229736/4ca54322-190f-466c-839a-950f0c6a97ad_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7qcmd7hRYzLcuCLFRi/vlWvS2ouVqChmQpvDOwuA02c="></script>
+    nonce="U9R1Vb0DTuUksaaOUMWoM9xtdJMJjz8sYckhetJVhHA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1229736/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               317
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1229736/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               317
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
