updated at: 2023-04-25 22:51, まんまるしぇーだー2.0/MnmrShader2.0 - みにすけーぷ - BOOTH

--- a/VRChat/65/1264065.html
+++ b/VRChat/65/1264065.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sYbKfyavt1fPfeUXmTN4B66nZcEnOSL8ooCmT8YIIYU="></script>
+    "x7zA7I9q/NjyMwoSP1/liDLqVqJHov1N5/TT+mTGmgQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まんまるしぇーだー2.0/MnmrShader2.0","description":"誰でも簡単にそこそこ可愛くなると評判のまんまるしぇーだーのver2.0です！！\n\n主な変更点は\n・単純な乗算だった陰影がちょっと\"良い感じ\"になりました！！\n・Emissionでバチバチに発光させれるようになりました！\n・暗所でOutlineが光らなくなりました！！\n\n\n","url":"https://booth.pm/ja/items/1264065","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/9cd8b37b-9d0a-4ce9-aefe-e5b355973cd7/i/1264065/90f78113-596c-4039-a48f-c37c9624085a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sYbKfyavt1fPfeUXmTN4B66nZcEnOSL8ooCmT8YIIYU="></script>
+    nonce="x7zA7I9q/NjyMwoSP1/liDLqVqJHov1N5/TT+mTGmgQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1264065/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               252
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1264065/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               252
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
