--- a/VRChat/47/1263747.html
+++ b/VRChat/47/1263747.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "IYUVp1GmFJSB3nNOcf0ZQN3erpexknxcJb3l/v+yO7o="></script>
+    "Tat6i7UyaLZ5vyf2jYe4DAboGHGVOeoTQ278E71O7cI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル　「ラナ - Suit -」","description":"オリジナル３Dモデル　RANA - ラナ -Suit-\n\n*このモデルはアップデートによるサポートはございません。\n*This model is not supported by updates.\n-2500円-\u003e1000円\n\n*ダイナミックボーンがインポートされてない場合、prefabのアップロードができない現象があります。\nダイナミックボーンをお持ちしていない方は「Hips, Left leg, Right leg, Chest, Chain_1, Head, Aho_Bone_1, Hair_Front, Hair_Side, Ponytail_1」のTransform以外のComponentを消してください。\n\n* If dynamic bone is not imported, prefab may not be uploaded.\nIf you do not have a dynamic bone, please delete the components other than Transform of \"Hips, Left leg, Right leg, Chest, Chain_1, Head, Aho_Bone_1, Hair_Front, Hair_Side, Ponytail_1\".\n","url":"https://booth.pm/ja/items/1263747","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/bf4eda07-ab20-4fe6-888a-5fc4f823e298/i/1263747/840b8ec3-2f01-430c-88e2-4f196c65a25e_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IYUVp1GmFJSB3nNOcf0ZQN3erpexknxcJb3l/v+yO7o="></script>
+    nonce="Tat6i7UyaLZ5vyf2jYe4DAboGHGVOeoTQ278E71O7cI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263747/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               393
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263747/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               393
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
