--- a/VRChat/66/1263566.html
+++ b/VRChat/66/1263566.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "cc6js0soc89r5OfjFLfHxLTM94v1P6DD5lRxtVGvK7o="></script>
+    "aybZZOBMnZYVEl3VPEL5T2EzZBCw6/EQtt7n6eMfZ18="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル『ルミナ』VRChat想定アバター","description":"VRChatアバター向けオリジナル3Dモデル\nルミナ(Lumina)\n\n　本モデルは、VRChatでのアバター利用を想定して作られたモデルです。(Unity標準Humanoid型)\n　付属のパッケージをUnityに導入する前に、VRC_SDKの導入が必要です。\n　VRC_SDKが導入されていれば、付属のパッケージを導入するだけでアップロードの準備が完了します。\n\n　本モデルデータ、及びテクスチャデータの改変は、各自の責任のもと、ご自由に行って頂いて問題ありません。\n\n　動作確認は、VRChat上でのデスクトップモード、VRモード、フルトラッキングVRモード(コントローラ2つ+トラッカー3つ)で行っています。\n\n◆同梱ファイル\n　UnityPackage(インポートしてSceneファイルを開くだけで、VRChatにアップロード可能な状態になります。\n　fbxファイル\n　テクスチャーファイル\n　psdファイル(uvを表示したレイヤー等が含まれています。色改変等にご利用下さい)\n　Textファイル(説明書及び利用規約の「ReadMe」.txtです)\n\n◆その他\n　VRChat向けに表情をいくつかアニメーションオーバーライドで設定済みです。お好みに合わせて改変してください。\n　デフォルト身長約147cm(帽子含む)\n　Unity上でいくつかのパーツを外せます。\n　フル装備でのポリゴン数は約19712ポリゴン。\n　リップシンク15種設定済み。\n　アイトラッキングを設定済みです。\n　表情変更用のシェイプキーがあり、組み合わせて表情が作れます。\n\n\n　Packageに同梱されている「ArkToonShader1.0.0.0」は、MITライセンスのガイドラインに則った形で使用しております。\n　Packageに同梱されている「ユニティちゃんトゥーンシェーダー Ver.2.0.5」は、UCL2.0(ユニティちゃんライセンス)に則った形で使用しております。\n　","url":"https://booth.pm/ja/items/1263566","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4500"},"image":"https://booth.pximg.net/c/620x620/947de320-3fbe-4c49-8a33-54211b03d19e/i/1263566/0150ef7b-37c8-4557-8bdc-8ac9d45bc510_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cc6js0soc89r5OfjFLfHxLTM94v1P6DD5lRxtVGvK7o="></script>
+    nonce="aybZZOBMnZYVEl3VPEL5T2EzZBCw6/EQtt7n6eMfZ18="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263566/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263566/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               175
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
