updated at: 2023-04-25 22:52, オリジナル3Dモデル『ノッケ族』 - うおのめ屋 - BOOTH

--- a/VRChat/13/1222313.html
+++ b/VRChat/13/1222313.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "45MC5zaqjPDeg8U6U8sIW9drIuBwnbbyMxpFIIjFkQQ="></script>
+    "lsNhltfi5Y1Qf4VrUHmT7BRRWWRKAe0XzETIzvE/QCg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ノッケ族』","description":"(Terms of use in English is listed at the bottom.)\n\n【モデル説明】\nUnity上でモデルの頭に好きなものを乗せるだけで自分だけのオリジナルアバターができる！\n色替えカスタマイズも簡単、PSDファイル付き。\nモデルの使い方、頭に物を乗せる方法の簡単な解説画像も付いています。\n\nオブジェクトとして 肉、(+皿)、鳥、花冠のFBXファイルも。頭に乗せてよし、ワールド製作や他アバターにもよし！\n他アニメーションファイルも充実。\n\nどこかに遠くにあるという暖かい島で生活している、大きな垂れた耳と長いしっぽが特徴的な民族。\nその生態は、何故かやたらと頭の上に物を乗せたがるらしいということ以外ほとんど謎に包まれている。\nこの先は君の目で確かめてくれ！","url":"https://booth.pm/ja/items/1222313","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/96ea4d9a-4469-4b7a-8662-22aee27c08e4/i/1222313/dea31cd7-0a4d-496f-8c2b-19837890d02b_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="45MC5zaqjPDeg8U6U8sIW9drIuBwnbbyMxpFIIjFkQQ="></script>
+    nonce="lsNhltfi5Y1Qf4VrUHmT7BRRWWRKAe0XzETIzvE/QCg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1222313/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1222313/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               47
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
