updated at: 2023-04-25 22:53, 【オリジナル3Dモデル】RB-26 - 白二郎の家 - BOOTH

--- a/VRChat/93/1263693.html
+++ b/VRChat/93/1263693.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KbNNSdi4iaDW/lNwUTAqssXW+a+QvmtlZtfk6W2RRT8="></script>
+    "rX24NTgHqNPQ4DGtUqugih47m2GCuTu6oH4CI54/kOk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】RB-26","description":"RB-26(ラクーンボット\"二郎\")はアライグマ博士の作ったお手伝いロボット！\n自分好みにカスタマイズしてお楽しみ下さい！\n\nVRChat向けに設定済みのPrefabを同梱していますので購入後すぐにアバターとして使用することができます。\nこのモデルのマテリアルにはCubeds Unity Shadersを使用しています。\n\nCubeds Unity Shaders\nhttps://vrchatjp.playing.wiki/d/Cubeds-Unity-Shaders\n\n【アバター導入方法】\n1. VRCSDKとCubeds Unity Shadersをインポートしておいてください。\n2. RB-26.unitypackageをインポートしてください。\n3. RB-26フォルダ内にある”RB-26prefab\"をHierarchyへ投入してください。\n4. VRCSDKを使用しアバターのアップロードを行ってください。\n\n\n【利用規約】\n\n・モデル改変OK\n・商用利用可\n・データの再配布(アバターペデスタルの配置及びPublicアバター化も含む)は禁止します。\n・本データを政治的パフォーマンス、宗教活動、ヘイトスピーチ、他者への嫌がらせ行為、その他公序良俗に反する目的で使用することを禁止します。\n・本データの利用において、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n\n\n【内容物】\n・RB-26FBX\nFBXファイル版モデルデータです。\n\n・Zenmai.fbx\n背中のゼンマイモデルデータです。\n\n・texturフォルダ\nテクスチャファイルとUV\n\n・RB-26.unitypackage\nVRChatのSDKがインポートされたUnityプロジェクトにインポートすると、そのままアバターとして使用できる状態にセットアップしたパッケージです。\nCubeds Unity Shadersを使用しています。\n\n\n【連絡先】\n何かありましたらアライグマ博士TwitterのDMまでご連絡ください。\nhttps://twitter.com/Dr_Raccoon4626\n\n","url":"https://booth.pm/ja/items/1263693","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/828735d0-f852-4dd6-abc2-9616ee6d696a/i/1263693/cd15c2ce-c233-47c5-b30e-af4c8821609b_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KbNNSdi4iaDW/lNwUTAqssXW+a+QvmtlZtfk6W2RRT8="></script>
+    nonce="rX24NTgHqNPQ4DGtUqugih47m2GCuTu6oH4CI54/kOk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -192,7 +192,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263693/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               157
@@ -207,14 +207,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263693/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               157
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
