updated at: 2023-04-25 22:54, オリジナル3Dモデル【倖子ちゃん】 - たまごパック - BOOTH

--- a/VRChat/85/1263185.html
+++ b/VRChat/85/1263185.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xngqhyLzZ1iTDdzdbT4SrX2BmQe4R+9bFJVHbpGoHLo="></script>
+    "8x/fJro/GzS2v83NqTrI4xfHf+rrc1h3NfOprnDI48c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【倖子ちゃん】","description":"オリジナル3Dモデル【倖子ちゃん】\n制作者：卵のたま\n\n\n彼女は起きることは、もう『二度と』ないけれど、電脳世界でなら、『夢の出来事』として自由に動き回れるかもしれません。\n\n\n\n※本モデルはArktoon-Shaders、DynamicBoneに対応しております。※\n事前にArktoon-Shaders、VRCSDKをインポートした状態でUnitypackageをインポートしてください。\nDynamicBoneの導入は任意です。\n\n\n●モデル詳細\n・Humanoid Rig対応\n・フルトラッキング対応\n・△：25,299\n・マテリアル数：1\n・テクスチャ：2枚（内１枚はMask用）\n・シェイプキー：37種（内リップシンク用キー15種）\n・リップシンク対応\n・Dynamic Bone設定済、おさげとかが揺れるよ\n・Arktoon-Shaders設定済\n\n●利用条件\n\n・本モデルデータの改変は自由です。\n\n・アプリケーション、ゲーム、動画配信等での利用を許可します。\n連絡を頂けると作者的に嬉しいです。","url":"https://booth.pm/ja/items/1263185","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/f1d7affa-4025-493b-ac2a-c8b1c13ca462/i/1263185/62835bbd-3a94-4128-838b-39a20f6e8fd7_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xngqhyLzZ1iTDdzdbT4SrX2BmQe4R+9bFJVHbpGoHLo="></script>
+    nonce="8x/fJro/GzS2v83NqTrI4xfHf+rrc1h3NfOprnDI48c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1263185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1263185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
